# ludus-vitae

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/world/: ATTRIBUTION.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: inspect.rs
src-tauri/src/: catalog.rs  commands.rs  db.rs  engine.rs  formulas.rs  integration_tests.rs  lib.rs  main.rs  model.rs  oracle.rs  snapshot.rs  vault.rs
src/api/: bridge.ts
src/audio/: engine.ts
src/components/: NewDirectiveModal.tsx  NightLedger.tsx  OracleDraftModal.tsx  Quests.tsx  ReckoningCeremony.tsx  SpriteAnim.tsx  TheBook.tsx  WorldStrip.tsx  chrome.tsx  pixelArt.tsx  ui.tsx
src/engine/: locomotionScene.ts
src/i18n/: I18nProvider.tsx  dict.ts
src/pages/: Arsenal.tsx  Campaign.tsx  Character.tsx  Chronicle.tsx  Domains.tsx  GenesisRitual.tsx  Journal.tsx  OraclePage.tsx  Settings.tsx  Today.tsx  pageProps.ts  views.ts
src/state/: SystemProvider.tsx
src/theme/: global.css
src/types/: contracts.ts
